error on benchmark explorer updated

--- a/pages/BenchmarkIndex/bmIntro.mdx
+++ b/pages/BenchmarkIndex/bmIntro.mdx
@@ -3,7 +3,7 @@ import { Tabs } from 'nextra/components'
 import { Callout } from 'nextra-theme-docs'
 
 <Callout type="warning" emoji="⚙️"> 
-    **New docs in the works** The benchmark explorer has had a facelift! New docs will be coming soon. TWhile this information is out of date many of the filters and data are the same or similar it still acts as a good guide!     
+    **New docs in the works** The benchmark explorer has had a facelift and is now on Metabase with even more charts and for a consistent experience across this and the Performance Analyser! New docs will be coming soon. While this information is out of date, many of the filters and data are the same or similar; it still acts as a good guide!     
 </Callout>
 ## Introduction to the benchmark index
  
