updates to campaign search and PA

--- a/pages/CampaignSearch.mdx
+++ b/pages/CampaignSearch.mdx
@@ -11,13 +11,13 @@ import { Callout } from 'nextra-theme-docs'
 
 ## 🗺️ Finding Your Way
 
-Campaign Search lives in the Ibex 2.0 Dashboard. After logging in with your Okta credentials, you'll find it waiting for you at the bottom of the dashboard page - like finding the last piece of chocolate in the box! 🍫
+Campaign Search lives in the Ibex 2.0 Dashboard. After logging in with your Okta credentials, you'll find it waiting for you towards the bottom of the dashboard page - like finding the last piece of chocolate in the box! 🍫
 
 ![image.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/app-dashboard_h4dl65.png)
 
 ## 🎯 What Makes Campaign Search Special?
 
-This tool is your comprehensive campaign archive, building on the foundation of the original Ibex platform with enhanced features and improved navigation. Think of it as your personal campaign librarian! 📚
+This tool is your access point to all campaigns imported into Ibex. It enables you to search and filter through our campaign history and giving you access to top level campaign details, campaign activations breakdown and a list of channels used and an outline of posts generated. It's your personal campaign librarian! 📚
 
 ### 🤔 Your Campaign Questions Answered
 
@@ -28,10 +28,10 @@ Campaign Search is designed to help you find answers to questions like:
 - 👩‍🎨 Which creators did we collaborate with on [campaign name or ID]?
 - 🏷️ What brands and campaigns have we run within [product category]?
 - 📅 How many campaigns have we conducted between [start date] and [end date]?
-- 👋 Have we worked with [creator handle or name]?
+- 👋 Have we worked with [creator handle]?
 
 <Callout type="info" emoji="🔍">
-  **Search Tip:** Looking to see if we've worked with a specific creator? Just type their handle or name in the search bar! 💪
+  **Search Tip:** Looking to see if we've worked with a specific creator before? Just type or paste their handle in the search bar! 💪
 </Callout>
 
 ## 🧭 Navigating Campaign Search
@@ -56,7 +56,8 @@ Click any table row to open the sidebar, revealing:
 
 ### 🔍 Mastering the Search Bar
 
-The search bar is your precision tool for finding specific campaigns 🔍  
+The search bar is great for finding unique data such as campaign codes or for fuzzy matching across the whole campaign dataset like a known vertical or product catagory. If you have something specific you want to find or check this is the place to start.   
+
 Use it to:
 1. 🔎 Search for text-based information:
    - 🏢 Brand names
@@ -64,31 +65,31 @@ Use it to:
    - 🌍 Territories
    - 🎯 Objectives
    - 📊 Verticals
+   - 💅 Product catagory or type
 
-2. 👥 Find creators by:
+2. 👥 Find campaigns we have used specific channels with:
    - 📱 Channel handle
-   - 👤 Display name
-   - 📧 Email address
 
 <Callout type="info">
-  **Search Strategy:** Use the search bar for specific identifiers and the filtering system for broader categories - it's like having both a microscope and a telescope! 🔬🔭
+  **Search Strategy:** Use the search bar for specific identifiers and the filtering system for exploring and researching available categories and associated campaigns — it's like having both a microscope and a telescope! 🔬🔭
 </Callout>
 
 ### 🎛️ The Power of Filters
 
-1. Search for non-numerical data (e.g., brand, campaign name, territory, objective, vertical)
-2. Search for specific creators using their:
-   - Channel handle
-   - Display name (e.g., Wendy Barker)
-   - Email address
+Access the filters by clicking the filter button to the right of the search bar. There are 11 filter groups, each containing a single or group of filters. For example Brand contains both organisation and individual brands so you can select an organisation like Beiersdorf to see everything in that portfolio or a particular brand Nivea. Some also contain an AND/OR toggle that can be used to tune the specificity of the results.
 
-The search bar works best for finding specific items (campaign names, codes, brands, or unique identifiers). For broader categories (beauty, brand awareness), the filtering system is more effective as some terms appear in multiple filters (e.g., beauty appears in both verticals and product categories).
+1. Search for any non-numerical data (e.g., brand, campaign name, territory, objective, vertical)
+2. Filter by specific catagories 
+3. Use AND/OR toggles to restrict or broaden searches
+4. Date ranges 
+5. Platforms and post types
 
-#### Filtering and sorting
+For broader searches and discovery, or for finding results using a combination of criteria the filtering system is more targeted and effective. As some terms appear in multiple filters (e.g., beauty appears in both verticals and product categories) specific filters here are going to be your friend over general search.
 
-Most table columns can be sorted using the chevron icon next to the column header. By default, the table sorts by date (newest first).
+#### Sorting
 
-Access the filters by clicking the filter button to the right of the search bar. There are 11 filter groups, each containing 1-2 filters and an AND/OR toggle that can be used to tune the specificity of the results.
+Most table columns can be sorted using the chevron icons next to the column header. By default, the table sorts by date (newest first).
+
 
 ![Screenshot 2025-03-19 at 16.07.49.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/campaign-search_pk4ti7.png)
 
@@ -104,6 +105,10 @@ Access the filters by clicking the filter button to the right of the search bar.
   - ❌ Import validation errors
   - 🔄 Space for planned updates
 </Callout>
+
+
+## ‼️ Import Validation
+
 
 ## 💡 Contributing to Campaign Search
 
