campaign search quickstart video and text edits
Adds quick start guide and multimedia for Campaign Search

Introduces a quick start guide section with a video to enhance user onboarding for Campaign Search.

Updates the existing documentation to better explain the tool's functionality and includes new images for visual support.

Improves user experience by providing clearer information and engaging content.

--- a/pages/CampaignSearch.mdx
+++ b/pages/CampaignSearch.mdx
@@ -3,17 +3,31 @@ import { Tabs } from 'nextra/components'
 import { Callout } from 'nextra-theme-docs'
 
 
-# 🔍 Campaign Search: Your Campaign Time Machine
+# 🔍 Campaign Search
 
 <Callout type="info">
-  **Quick Start:** Think of Campaign Search as your personal campaign time machine - it lets you travel through Ibex's campaign history with just a few clicks! 🚀
+  **What It Is?** Think of Campaign Search as your personal campaign time machine - it lets you travel through Ibex's campaign history with just a few clicks! 🚀
 </Callout>
+
+## ⌛️ Quick start guide  
+
+  <video
+    src="https://res.cloudinary.com/goatagency/video/upload/v1747863617/Ibex%20Docs/campaign-search-shorter-editv2.1_gdny3z.mp4" 
+    type="video/mp4"
+    height="520px"
+    controls
+    poster="https://res.cloudinary.com/goatagency/image/upload/v1747863580/Ibex%20Docs/campaign-search_jyjoxt.png"
+  >
+  </video>
+
 
 ## 🗺️ Finding Your Way
 
 Campaign Search lives in the Ibex 2.0 Dashboard. After logging in with your Okta credentials, you'll find it waiting for you towards the bottom of the dashboard page - like finding the last piece of chocolate in the box! 🍫
 
 ![image.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/app-dashboard_h4dl65.png)
+
+
 
 ## 🎯 What Makes Campaign Search Special?
 
@@ -78,6 +92,7 @@ Use it to:
 
 Access the filters by clicking the filter button to the right of the search bar. There are 11 filter groups, each containing a single or group of filters. For example Brand contains both organisation and individual brands so you can select an organisation like Beiersdorf to see everything in that portfolio or a particular brand Nivea. Some also contain an AND/OR toggle that can be used to tune the specificity of the results.
 
+![filters.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/filters_nkbqei.png)
 1. Search for any non-numerical data (e.g., brand, campaign name, territory, objective, vertical)
 2. Filter by specific catagories 
 3. Use AND/OR toggles to restrict or broaden searches
